<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/completeTask"
        android:icon="@drawable/complete_task"
        android:title="@string/complete_task"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu"
        android:icon="@drawable/three_dots"
        android:title="@string/menu"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/sort_by_title"
                android:title="@string/sort_by_title" />

            <item
                android:id="@+id/sort_by_due_date"
                android:title="@string/sort_by_due_date_default" />
        </menu>
    </item>

</menu>